--- a/css/style.scss
+++ b/css/style.scss
@@ -89,7 +89,7 @@ body {
     }
 }
 
-a {
+button {
     text-decoration: none;
     color: $primary;
 }
@@ -138,6 +138,37 @@ a {
     background: #d4d4d441;
 }
 
+// btn effects
+//Up
+.btn-fade-up {
+    background-color: $transparent;
+    transition: 0.5s;
+}
+
+.btn-fade-up:hover {
+    background-color: rgba(255, 255, 255, 0.452);
+}
+
+.btn-fade-up:not(hover) {
+    background-color: $transparent;
+}
+
+//in
+.btn-fade-in {
+    opacity: 0.6;
+}
+
+.btn-fade-in:hover {
+    opacity: 1;
+    transition: 0.5s;
+}
+
+.btn-fade-in:not(hover) {
+    opacity: 0.6;
+    transition: 0.5s;
+}
+
+// Table
 .table {
     border: 5px solid $primary;
     width: 320px;
