--- a/css/style.scss
+++ b/css/style.scss
@@ -4,7 +4,7 @@ $primary: rgba(255, 255, 255, 1);
 $secondary: rgba(255, 255, 255, 0.658);
 $red: #e63947cb;
 $dark-sky-blue: rgba(140, 187, 213, 0.842);
-$jet: rgba(43, 44, 44, 1);
+$jet: #2b2c2c;
 $transparent: rgba(0, 0, 0, 0);
 //Bg
 $midnight-blue: rgb(12, 18, 58);
