--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@400;700&display=swap");
 html {
   font-family: 'Nanum Gothic Coding', monospace;
@@ -164,31 +163,31 @@ button {
   background: #d4d4d441;
 }
 
-.btn-fade-up {
+.btns-fade-up {
   background-color: rgba(0, 0, 0, 0);
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 
-.btn-fade-up:hover {
+.btns-fade-up:hover {
   background-color: rgba(255, 255, 255, 0.452);
 }
 
-.btn-fade-up:not(hover) {
+.btns-fade-up:not(hover) {
   background-color: rgba(0, 0, 0, 0);
 }
 
-.btn-fade-in {
+.btns-fade-in {
   opacity: 0.6;
 }
 
-.btn-fade-in:hover {
+.btns-fade-in:hover {
   opacity: 1;
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 
-.btn-fade-in:not(hover) {
+.btns-fade-in:not(hover) {
   opacity: 0.6;
   -webkit-transition: 0.5s;
   transition: 0.5s;
@@ -251,21 +250,20 @@ button {
   padding: 0px 10px 10px 10px;
 }
 
-.table-btn {
+.table-btns {
   padding: 10px;
   border-top: 5px solid white;
   width: 100%;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (52px)[5];
-      grid-template-columns: repeat(5, 52px);
-  grid-gap: 10px;
-  grid-auto-rows: minmax(55px, auto);
+  height: 100%;
   text-align: center;
-  justify-items: stretch;
 }
 
-.table-btn-single {
+.table-btns-btn {
+  height: 60px;
+  width: 54px;
+}
+
+.table-btns-single {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -278,145 +276,25 @@ button {
   border: 1px solid rgba(255, 255, 255, 0.658);
 }
 
-.table-btn-op {
+.table-btns-op {
   font-weight: 700;
   background-color: rgba(255, 255, 255, 0.658);
   color: #2b2c2c;
 }
 
-.table-btn-master {
+.table-btns-master {
   font-weight: 700;
   background-color: #e63947cb;
 }
 
-.table-btn-7 {
-  -ms-grid-column: 1;
-  grid-column: 1;
-  -ms-grid-row: 1;
-  grid-row: 1;
-}
-
-.table-btn-8 {
-  -ms-grid-column: 2;
-  grid-column: 2;
-  -ms-grid-row: 1;
-  grid-row: 1;
-}
-
-.table-btn-9 {
-  -ms-grid-column: 3;
-  grid-column: 3;
-  -ms-grid-row: 1;
-  grid-row: 1;
-}
-
-.table-btn-del {
-  -ms-grid-column: 4;
-  grid-column: 4;
-  -ms-grid-row: 1;
-  grid-row: 1;
-}
-
-.table-btn-ac {
-  -ms-grid-column: 5;
-  grid-column: 5;
-  -ms-grid-row: 1;
-  grid-row: 1;
-}
-
-.table-btn-4 {
-  -ms-grid-column: 1;
-  grid-column: 1;
-  -ms-grid-row: 2;
-  grid-row: 2;
-}
-
-.table-btn-5 {
-  -ms-grid-column: 2;
-  grid-column: 2;
-  -ms-grid-row: 2;
-  grid-row: 2;
-}
-
-.table-btn-6 {
-  -ms-grid-column: 3;
-  grid-column: 3;
-  -ms-grid-row: 2;
-  grid-row: 2;
-}
-
-.table-btn-x {
-  -ms-grid-column: 4;
-  grid-column: 4;
-  -ms-grid-row: 2;
-  grid-row: 2;
-}
-
-.table-btn-÷ {
-  -ms-grid-column: 5;
-  grid-column: 5;
-  -ms-grid-row: 2;
-  grid-row: 2;
-}
-
-.table-btn-1 {
-  -ms-grid-column: 1;
-  grid-column: 1;
-  -ms-grid-row: 3;
-  grid-row: 3;
-}
-
-.table-btn-2 {
-  -ms-grid-column: 2;
-  grid-column: 2;
-  -ms-grid-row: 3;
-  grid-row: 3;
-}
-
-.table-btn-3 {
-  -ms-grid-column: 3;
-  grid-column: 3;
-  -ms-grid-row: 3;
-  grid-row: 3;
-}
-
-.table-btn-plus {
-  -ms-grid-column: 4;
-  grid-column: 4;
-  -ms-grid-row: 3;
-  grid-row: 3;
-}
-
-.table-btn-equals {
-  -ms-grid-column: 5;
-  grid-column: 5;
-  -ms-grid-row: 3;
-  -ms-grid-row-span: 2;
-  grid-row: 3/5;
+.table-btns-equals {
+  height: 100%;
   background-color: rgba(140, 187, 213, 0.842);
   color: #2b2c2c;
   font-weight: 700;
 }
 
-.table-btn-0 {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-column: 1/3;
-  -ms-grid-row: 4;
-  grid-row: 4;
-}
-
-.table-btn-point {
-  -ms-grid-column: 3;
-  grid-column: 3;
-  -ms-grid-row: 4;
-  grid-row: 4;
-}
-
-.table-btn-- {
-  -ms-grid-column: 4;
-  grid-column: 4;
-  -ms-grid-row: 4;
-  grid-row: 4;
+.table-btns-0 {
+  width: 100%;
 }
 /*# sourceMappingURL=style.css.map */
