--- a/css/style.scss
+++ b/css/style.scss
@@ -141,31 +141,31 @@ button {
 // btn effects
 $transition-btn-hover: 0.5s;
 //Up
-.btn-fade-up {
+.btns-fade-up {
     background-color: $transparent;
     transition: $transition-btn-hover;
 }
 
-.btn-fade-up:hover {
+.btns-fade-up:hover {
     background-color: rgba(255, 255, 255, 0.452);
 }
 
-.btn-fade-up:not(hover) {
+.btns-fade-up:not(hover) {
     background-color: $transparent;
 }
 
 //in
 $initial-transparent: 0.6;
-.btn-fade-in {
+.btns-fade-in {
     opacity: $initial-transparent;
 }
 
-.btn-fade-in:hover {
+.btns-fade-in:hover {
     opacity: 1;
     transition: $transition-btn-hover;
 }
 
-.btn-fade-in:not(hover) {
+.btns-fade-in:not(hover) {
     opacity: $initial-transparent;
     transition: $transition-btn-hover;
 }
@@ -202,16 +202,16 @@ $initial-transparent: 0.6;
             padding: 0px 10px 10px 10px;
         }
     }
-    &-btn {
+    &-btns {
         padding: 10px;
         border-top: 5px solid $primary;
         width: 100%;
-        display: grid;
-        grid-template-columns: repeat(5, 52px);
-        grid-gap: 10px;
-        grid-auto-rows: minmax(55px, auto);
+        height: 100%;
         text-align: center;
-        justify-items: stretch;
+        &-btn {
+            height: 60px;
+            width: 54px;
+        }
         &-single {
             display: flex;
             justify-content: center;
@@ -227,84 +227,14 @@ $initial-transparent: 0.6;
             font-weight: 700;
             background-color: $red;
         }
-        //Row 1
-        &-7 {
-            grid-column: 1;
-            grid-row: 1;
-        }
-        &-8 {
-            grid-column: 2;
-            grid-row: 1;
-        }
-        &-9 {
-            grid-column: 3;
-            grid-row: 1;
-        }
-        &-del {
-            grid-column: 4;
-            grid-row: 1;
-        }
-        &-ac {
-            grid-column: 5;
-            grid-row: 1;
-        }
-        //Row 2
-        &-4 {
-            grid-column: 1;
-            grid-row: 2;
-        }
-        &-5 {
-            grid-column: 2;
-            grid-row: 2;
-        }
-        &-6 {
-            grid-column: 3;
-            grid-row: 2;
-        }
-        &-x {
-            grid-column: 4;
-            grid-row: 2;
-        }
-        &-÷ {
-            grid-column: 5;
-            grid-row: 2;
-        }
-        //Row 3
-        &-1 {
-            grid-column: 1;
-            grid-row: 3;
-        }
-        &-2 {
-            grid-column: 2;
-            grid-row: 3;
-        }
-        &-3 {
-            grid-column: 3;
-            grid-row: 3;
-        }
-        &-plus {
-            grid-column: 4;
-            grid-row: 3;
-        }
         &-equals {
-            grid-column: 5;
-            grid-row: 3/5;
+            height: 100%;
             background-color: $dark-sky-blue;
             color: $jet;
             font-weight: 700;
         }
-        //Row 4
         &-0 {
-            grid-column: 1/3;
-            grid-row: 4;
-        }
-        &-point {
-            grid-column: 3;
-            grid-row: 4;
-        }
-        &-- {
-            grid-column: 4;
-            grid-row: 4;
+            width: 100%;
         }
     }
 }
