--- a/css/style.scss
+++ b/css/style.scss
@@ -11,10 +11,10 @@ $orange: #e26d2c;
 $purple: #b30d32;
 $blue-marine: #449ba1;
 //Import font
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@400;700&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@400;700&display=swap');
 //Css
 html {
-    font-family: 'Nanum Gothic Coding', monospace;
+    font-family: monospace;
     box-sizing: border-box;
     font-size: 62.5%;
     color: $primary;
@@ -113,13 +113,12 @@ $initial-transparent: 0.6;
     width: 320px;
     border-radius: 16px;
     overflow: hidden;
-    font-size: 2.4rem;
     color: $primary;
     &-screen {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        font-size: calc(1em + 1vw);
+        font-size: 48px;
         height: calc(30px + 10px + 10px + 5px + 32px + 32px);
         padding-top: 10px;
         &-control {
@@ -140,6 +139,7 @@ $initial-transparent: 0.6;
         }
     }
     &-btns {
+        font-size: 2.8rem;
         padding: 10px;
         border-top: 5px solid $primary;
         width: 100%;
