--- a/css/style.scss
+++ b/css/style.scss
@@ -12,9 +12,10 @@ $purple: #b30d32;
 $blue-marine: #449ba1;
 //Import font
 // @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&display=swap');
 //Css
 html {
-    font-family: monospace;
+    font-family: 'Roboto Mono', monospace;
     box-sizing: border-box;
     font-size: 62.5%;
     color: $primary;
@@ -118,10 +119,11 @@ $initial-transparent: 0.6;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        font-size: 48px;
+        font-size: 4.8rem;
         height: calc(30px + 10px + 10px + 5px + 32px + 32px);
         padding-top: 10px;
         &-control {
+            font-size: 4.2rem;
             display: flex;
             flex-direction: row;
             align-items: center;
@@ -156,19 +158,20 @@ $initial-transparent: 0.6;
             border: 1px solid $secondary;
         }
         &-op {
-            font-weight: 700;
+            font-weight: 500;
             background-color: $secondary;
             color: $jet;
         }
         &-master {
-            font-weight: 700;
+            font-size: 2.4rem;
+            font-weight: 500;
             background-color: $red;
         }
         &-equals {
             height: 100%;
             background-color: $dark-sky-blue;
             color: $jet;
-            font-weight: 700;
+            font-weight: 500;
         }
         &-0 {
             width: 100%;
